# tawasco

./: .gitignore  README.md
.github/actions/install-rust/: action.yml
.github/workflows/: build_docker_images.yml  ci_bencher.yml  ci_host_based.yml  ci_host_based_sequential.yml  ci_stacking.yml  ci_tracer.yml
docker_images/: Lane.Dockerfile
experiments/jobs/: compare_static_subfiles.yml  estimate_stride.yml  mitigate_spectre.yml  mutate_wasmbench.yml
experiments/jobs/defensive_diversity/: measure_performance.yml  mitigate_ct.yml
experiments/jobs/defensive_diversity/wasms/: sp.wasm
experiments/jobs/dynamic_diversity/: collect_traces.yml  deterministic.yml  get_execution_times.yml  oracle_diff_trace_ins.sh  oracle_diff_trace_ins_no_loc.sh  oracle_diff_trace_mem.sh  oracle_diff_trace_mem.th.sh  time_until_diff.no.inslocation.yml  time_until_diff.yml
experiments/jobs/old/: README.md  collect_traces copy 2.yml  collect_traces.stack.yml  execute.yml  move_to.yml  wbc_ber.yml
experiments/jobs/old/defensive_diversity/: mitigate_wbc.3000.yml  mitigate_wbc.4000.yml  mitigate_wbc.yml
experiments/jobs/old/defensive_diversity/wasms/: .gitignore  eviction.wasm  generate.sh
experiments/jobs/performance/: get_performance.v2 copy.yaml  get_performance.v2.yaml  get_performance.yaml  measure_performance.yaml
experiments/jobs/static_diversity/: compare_static_programs.yml  do_meta_plots.yml  mutate.yml  preservation_study.yml
experiments/kube/: config.yml  secrets_external.sh
experiments/scripts/metrics/dynamic_analysis/: get_mem_entropy.py
experiments/scripts/metrics/dynamic_analysis/100doors/: 100_doors.c.wasm  100_doors.c.wasm.wat  diffi.sh
experiments/scripts/metrics/meta/: compile_wasmtime.py  qq
experiments/scripts/metrics/static_analysis/: count_programs.wasm.py  latexify.py
experiments/scripts/metrics/swivel_bench/: calculate_avg.py  get_safeside_results.py  get_safeside_results_ret2spec.py  just_run_to_plot.py  latexify.py  overall_success_rate.btb_breakout.json  overall_success_rate.btb_leakage.json  overall_success_rate.pht.json  plot_breakout_success.py
experiments/scripts/timing_experiment/: leakage.wasm  leakage.wat  plot_distributions.py  stack.1.0.wasm  stack.1.1000.wasm  stack.1.200.wasm  stack.1.250.wasm  t.wat
experiments/wasmbench/: .gitignore  NOTES.md  filter.sh  filter_wasmizer.sh  generate_variants.sh  get_bench_meta.sh  get_instruction_count.sh  get_number_of_functions.sh  get_numbers.sh  meta.csv  plot_single.py
experiments/wasms/ret2spec/: breakout.wasm  generate_variants.sh  ret2spec_sa.wasm
host_based/: .gitignore  Cargo.toml  w1.wat  w2.wat
host_based/bench/: Cargo.toml
host_based/bench/src/: main.rs
host_based/bench/tests/: i.wasm
host_based/fuzz/: Cargo.toml
host_based/fuzz/fuzz_targets/: wasm-opt.rs  wasm2wat.rs
host_based/host/: Cargo.toml
host_based/host/src/: main.rs
host_based/oracles/: binaryen.sh
host_based/stacking/: Cargo.toml  stacking.sym  t.wat  t1.wat  t2.wat
host_based/stacking/src/: main.rs
host_based/stacking/tests/: btb_breakout.wasm  btb_leakage.wasm  spectre_v1_pht_sa.wasm  testoracle.sh
host_based/tracer/: .gitignore  Cargo.toml  README.md  build.rs  test.sh
host_based/tracer/pintool/: Makefile  macospatch.h  no_rand.sh  pintool_bridge.c  sqlite.c  test.sh  tracer.cpp
host_based/tracer/pintool/common/: common.c
host_based/tracer/src/: lib.rs  main.rs
host_based/tracer/tests/wasms/: test.wasm  test_global.2.wat  test_global.wat  test_spill_reload.wat  test_wasi.wat
port_contention/: README.md
port_contention/predictor/: .gitignore  contention.c  contention.p5.c  index.html  server.py  setup.sh  template.wat
wbc/ches2016/: chow_aes3_encrypt_wb.c
