[package]
name = "bench"
version = "0.0.1"
publish = false
description = "Takes one Wasm input and provides a benchmarking on it, providing, execution time, compilation time, memory usage, binary size and mc size."
edition = "2021"
authors = ["Jacarte <jacarte9212@gmail.com>"]


# wasmtime as a dep
[dependencies]
env_logger = "0.9"
itertools = "0.10.0"
clap = { version = "4.0.0", features = ["derive"] }
log = "0.4.17"
anyhow = "1.0.58"
rand = { version = "0.8.4", features = ["small_rng"] }
blake3 = "1.2.0"
sled = "0.34.7"
thiserror = "1.0.28"
stdio-override = "0.1.3"
wasm-mutate = { path = "../../wasm-tools/crates/wasm-mutate"}
wasmparser = { path = "../../wasm-tools/crates/wasmparser"  }

wasmtime = { path = "../../wasmtime/crates/wasmtime" }
wasmtime-wasi = { path = "../../wasmtime/crates/wasi" }
wasmtime-jit = { path = "../../wasmtime/crates/jit" }
wasi-common = {  path = "../../wasmtime/crates/wasi-common"  }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pausable_clock = "1.0.1"

[features]
default = ["wasm-mutate/default", "wasm-mutate/only-1-features"]
only-runtime = ["wasm-mutate/runtime-only", "wasm-mutate/peephole-small", "wasm-mutate/only-1-features"]
testing = ["wasm-mutate/default"]
