[package]
name = "wasm-mutate-diff-fuzz"
version = "0.0.1"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
tempfile = "3.0"
anyhow = "1.0.58"
arbitrary = { version="1.1.0", features=["derive"] }
env_logger = "0.9"
libfuzzer-sys = "0.4.0"
log = "0.4.17"


stacking = { path = "../stacking", features = ["testing"] }


[lib]
test = false
doctest = false

[[bin]]
name = "wasm2wat"
path = "fuzz_targets/wasm2wat.rs"
test = false
doc = false
bench = false
